# easy-cars-service-2

./: README.md  pyproject.toml
cars_app/: app.py
cars_app/car/: model.py  service.py  types.py  validator.py
cars_app/car/car_body/: model.py
cars_app/car/engine/: model.py
cars_app/car/wheel/: model.py
cars_app/data/: cars.json
cars_app/data_loader/: cars_loader.py  json_loader.py
cars_app/validator/: text.py
tests/test_car/: test_model.py  test_service.py
tests/test_car/test_car_body/: test_model.py
tests/test_data_loader/: test_cars_loader.py  test_json_loader.py
tests/test_validator/: test_text.py
